<resources>
    <string name="app_name">FBB</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_userid">User ID/Mobile Number</string>
    <string name="action_log_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">New User? Sign Up</string>
    <string name="error_invalid_email">This user id is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <string name="login_page">Login Page</string>
    <string name="no_implementation">Not Yet Implemented</string>

    <string name="instore_locater">Instore\nLocater</string>
    <string name="barcode_scanner">Scan\nBarcode</string>
    <string name="my_wallet">My\nWallet</string>
    <string name="my_transaction">My\nTransaction</string>
    <string name="action_options">Menu Options</string>
    <string name="actions_user_details">User Details</string>
    <string name="action_settings">Settings</string>
    <string name="action_notifications">Notifications</string>
    <string name="action_my_cart">My cart</string>
    <string name="scanFirstLine">Scan the code or</string>
    <string name="typeIt">Type It</string>
    <string name="scanSecondLine">Align and hold still</string>
    <string name="history">History</string>
    <string name="action_log_out">Logout</string>
    <string name="address_hint">XXXXXX,XXXXXX Society,XXXX\nCity,State\nPin Code</string>

    <string name="my_cart">My Cart</string>
    <string name="scan">Scan</string>
    
    <string name="enter_string_manually">Enter Code Manually:</string>
    <string name="done">Done</string>

</resources>
