<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.myapps.android.fbb.DashBoard">

    <item
        android:id="@+id/menu"
        android:icon="@mipmap/ic_menu_white_24dp"
        android:title="@string/action_options"
        android:actionViewClass="android.widget.Spinner"
        app:showAsAction="always"/>

    <item
        android:id="@+id/user"
        android:icon="@mipmap/ic_person_white_24dp"
        android:title="@string/actions_user_details"
        app:showAsAction="always"/>

    <item
        android:id="@+id/notifications"
        android:icon="@mipmap/ic_notifications_white_24dp"
        android:title="@string/action_notifications"
        app:showAsAction="always"/>

    <item
        android:id="@+id/shopping_cart"
        android:icon="@mipmap/ic_shopping_basket_white_24dp"
        android:title="@string/action_my_cart"
        app:showAsAction="always"/>


</menu>