<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.myapps.android.fbb.BarcodeScanner"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scanFirstLine"
            android:textSize="20sp"
            android:textAllCaps="true"/>

        <Button
            android:id="@+id/typeIt"
            android:layout_width="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_height="25dp"
            android:text="@string/typeIt"
            android:textSize="20sp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorAccent"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:layout_marginTop="10dp"
        android:text="@string/scanSecondLine"
        />

    <Button
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:text="@string/history"
        android:textAllCaps="true"/>

</LinearLayout>
