<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.myapps.android.fbb.ScanningPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootLinear"
    android:orientation="vertical"
    android:background="@color/colorAccent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_scan_page_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <RelativeLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            app:titleTextColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/close_button2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:foregroundGravity="center"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_clear_white_24dp"
                android:layout_alignParentLeft="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:onClick="closeActivity"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="@color/colorAccent"
                android:textAllCaps="true"
                android:text="@string/scan"/>

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scanFirstLine"
            android:textSize="20sp"
            android:textAllCaps="true"/>

        <Button
            android:id="@+id/typeIt"
            android:layout_width="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_height="25dp"
            android:text="@string/typeIt"
            android:textSize="20sp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorAccent"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:layout_marginTop="10dp"
        android:text="@string/scanSecondLine"
        />


    <Button
        android:id="@+id/initScan"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@color/black"
        android:layout_margin="25dp"
        android:text="Initiate Scan"
        android:textSize="30dp"
        android:textColor="@color/colorPrimary"/>


    <Button
        android:id="@+id/historyButton"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:text="@string/history"
        android:textAllCaps="true"/>


</LinearLayout>
